--- a/public/COMP4537.html
+++ b/public/COMP4537.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="COMP4537/Labs/1/quizQuestions/index.html">Lab1 Hard-Coded-Quiz</a></li>
         <li><a href="COMP4537/Labs/2/dynamicQuiz/index.html">Lab2 Dynamic-Quiz</a></li>
-        <li><a href="COMP4537/Labs/4/getDate/server.js">Lab2 Dynamic-Quiz</a></li>
+        <li><a href="COMP4537/Labs/4/getDate/server.js">Lab4</a></li>
         <li>Lab 3 </li>
     </ul>
 
